[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,15 +15,18 @@
         <div>
             <div>
                 <h4>
-                    <p>Currently , I am pursue my Bachelor's of Tchnology degree in Imformation Technology.</p>
-                    <p> I have little bit of knowledge about various programming language.</p>
-                    <p>    I know </p>
-                    <p>    1) C </p>
-                    <p>    2) C++</p>
-                    <p>    3) Python 3</p>
-                    <p>    4) Java</p>
-                    <p>    5) html  </p>
+                    <center>
+                        <p>Currently , I am pursue my Bachelor's of Tchnology degree in Imformation Technology.</p>
+                        <p> I have little bit of knowledge about various programming language.</p>
+                        <p>    I know </p>
+                        <p>    1) C </p>
+                        <p>    2) C++</p>
+                        <p>    3) Python 3</p>
+                        <p>    4) Java</p>
+                        <p>    5) html  </p>
+                    </center>
                 </h4>
+                
             </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
